# template

./: .gitignore  Cargo.toml  LICENSE.md  README.md  cargo-generate.toml  init-script.rhai
.github/: template-values.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: check.yml
multi-process/: Cargo.toml  cargo-generate.toml
multi-process/core/: Cargo.toml
multi-process/gateway/: Cargo.toml
multi-process/gateway/src/: context.rs  forward.rs  main.rs
multi-process/worker/: Cargo.toml
multi-process/worker/src/: cache.rs  command.rs  context.rs  dispatch.rs  main.rs
single-process/: cargo-generate.toml
single-process/src/: command.rs  context.rs  dispatch.rs  main.rs  resume.rs
single-process/src/command/: ping.rs
src/: command.rs  context.rs  dispatch.rs  main.rs  resume.rs
src/command/: restart.rs
