[package]
name = "template"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
rustls = "0.23"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "rt", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-model = "0.17"
