[workspace]
members = ["gateway", "worker"]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
anyhow = "1"
axum = "0.8"
futures-util = "0.3"
reqwest = "0.13"
rustls = "0.23"
serde = "1"
serde_json = "1"
tokio = "1"
tokio-stream = "0.1"
tokio-util = "0.7"
tokio-websockets = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
twilight-cache-inmemory = "0.17"
twilight-gateway = "0.17"
twilight-http = "0.17"
twilight-model = "0.17"
twilight-util = "0.17"
