[package]
name = "gateway"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
axum = { workspace = true, features = ["ws"] }
rustls.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "net", "rt", "signal"] }
tokio-stream.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
twilight-cache-inmemory.workspace = true
twilight-gateway.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true
