[package]
name = "worker"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
futures-util = { workspace = true, features = ["sink"] }
reqwest = { workspace = true, features = ["json"] }
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["macros","rt", "signal"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
tokio-websockets = { workspace = true, features = ["aws_lc_rs", "client", "fastrand"] }
tracing.workspace = true
tracing-subscriber.workspace = true
twilight-http.workspace = true
twilight-model.workspace = true
twilight-util = { workspace = true, features = ["builder"] }
